tests/baselines/reference/compoundExponentiationAssignmentLHSCanBeAssigned1.errors.txt
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(9,8): error TS2454: Variable 'b' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(10,8): error TS2454: Variable 'c' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(11,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(12,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(15,1): error TS2454: Variable 'x2' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(16,1): error TS2454: Variable 'x2' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(16,8): error TS2454: Variable 'b' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(17,1): error TS2454: Variable 'x2' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(17,8): error TS2454: Variable 'c' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(18,1): error TS2454: Variable 'x2' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(18,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(19,1): error TS2454: Variable 'x2' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(19,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(22,1): error TS2454: Variable 'x3' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(23,1): error TS2454: Variable 'x3' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(23,8): error TS2454: Variable 'b' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(24,1): error TS2454: Variable 'x3' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(24,8): error TS2454: Variable 'c' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,1): error TS2454: Variable 'x3' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,1): error TS2454: Variable 'x3' is used before being assigned.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,8): error TS18050: The value 'undefined' cannot be used here.


==== compoundExponentiationAssignmentLHSCanBeAssigned1.ts (22 errors) ====
    enum E { a, b, c }
    
    var a: any;
    var b: number;
    var c: E;
    
    var x1: any;
    x1 **= a;
    x1 **= b;
           ~
!!! error TS2454: Variable 'b' is used before being assigned.
    x1 **= c;
           ~
!!! error TS2454: Variable 'c' is used before being assigned.
    x1 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x1 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x2: number;
    x2 **= a;
    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
    x2 **= b;
    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
           ~
!!! error TS2454: Variable 'b' is used before being assigned.
    x2 **= c;
    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
           ~
!!! error TS2454: Variable 'c' is used before being assigned.
    x2 **= null;
    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x2 **= undefined;
    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x3: E;
    x3 **= a;
    ~~
!!! error TS2454: Variable 'x3' is used before being assigned.
    x3 **= b;
    ~~
!!! error TS2454: Variable 'x3' is used before being assigned.
           ~
!!! error TS2454: Variable 'b' is used before being assigned.
    x3 **= c;
    ~~
!!! error TS2454: Variable 'x3' is used before being assigned.
           ~
!!! error TS2454: Variable 'c' is used before being assigned.
    x3 **= null;
    ~~
!!! error TS2454: Variable 'x3' is used before being assigned.
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x3 **= undefined;
    ~~
!!! error TS2454: Variable 'x3' is used before being assigned.
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.